{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 53,
  "lineage": "91d4aadf-cf28-2c7a-9ab7-afadf1420c0e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "address-master-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.240.0.10",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-04-21T15:29:32.860-07:00",
            "id": "projects/infrastructure-384422/regions/europe-west4/addresses/master-0",
            "name": "master-0",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "infrastructure-384422",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/regions/europe-west4/addresses/master-0",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/regions/europe-west4/subnetworks/ew4-kubernetes"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "address-master-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.240.0.11",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-04-21T15:29:32.861-07:00",
            "id": "projects/infrastructure-384422/regions/europe-west4/addresses/master-1",
            "name": "master-1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "infrastructure-384422",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/regions/europe-west4/addresses/master-1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/regions/europe-west4/subnetworks/ew4-kubernetes"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "address-worker-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.240.0.20",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-04-21T15:32:11.770-07:00",
            "id": "projects/infrastructure-384422/regions/europe-west4/addresses/worker-0",
            "name": "worker-0",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "infrastructure-384422",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/regions/europe-west4/addresses/worker-0",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/regions/europe-west4/subnetworks/ew4-kubernetes"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "address-worker-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.240.0.21",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-04-21T15:32:11.774-07:00",
            "id": "projects/infrastructure-384422/regions/europe-west4/addresses/worker-1",
            "name": "worker-1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "infrastructure-384422",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/regions/europe-west4/addresses/worker-1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/regions/europe-west4/subnetworks/ew4-kubernetes"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static-kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.147.88.104",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-04-21T15:19:35.167-07:00",
            "id": "projects/infrastructure-384422/regions/europe-west4/addresses/kubernetes-public-ip",
            "name": "kubernetes-public-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "infrastructure-384422",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/regions/europe-west4/addresses/kubernetes-public-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/regions/europe-west4/forwardingRules/kubernetes-forwarding-rule"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-04-21T15:19:45.708-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/infrastructure-384422/global/firewalls/kubernetes-allow-external",
            "log_config": [],
            "name": "kubernetes-allow-external",
            "network": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/global/networks/kubernetes",
            "priority": 1000,
            "project": "infrastructure-384422",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/global/firewalls/kubernetes-allow-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2023-04-21T15:19:45.709-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/infrastructure-384422/global/firewalls/kubernetes-allow-internal",
            "log_config": [],
            "name": "kubernetes-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/global/networks/kubernetes",
            "priority": 1000,
            "project": "infrastructure-384422",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/global/firewalls/kubernetes-allow-internal",
            "source_ranges": [
              "10.200.0.0/16",
              "10.240.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "kubernetes-allow-health-check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-21T17:53:39.411-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/infrastructure-384422/global/firewalls/kubernetes-allow-health-check",
            "log_config": [],
            "name": "kubernetes-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/global/networks/kubernetes",
            "priority": 1000,
            "project": "infrastructure-384422",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/global/firewalls/kubernetes-allow-health-check",
            "source_ranges": [
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "kubernetes-forwarding-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2023-04-21T17:54:02.358-07:00",
            "id": "projects/infrastructure-384422/regions/europe-west4/forwardingRules/kubernetes-forwarding-rule",
            "ip_address": "34.147.88.104",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "kubernetes-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "6443",
            "project": "infrastructure-384422",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/regions/europe-west4/forwardingRules/kubernetes-forwarding-rule",
            "target": "projects/infrastructure-384422/regions/europe-west4/targetPools/kubernetes-target-pool"
          },
          "dependencies": [
            "google_compute_address.static-kubernetes",
            "google_compute_http_health_check.kubernetes-health-check",
            "google_compute_target_pool.kubernetes-target-pool"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": false,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/zones/europe-west4-a/disks/boot-disk-master-0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infrastructure-384422/zones/europe-west4-a/instances/master-0",
            "instance_id": "2949306014680153379",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "custom-2-2048",
            "metadata_fingerprint": "A4JQA1U-Z10=",
            "metadata_startup_script": "    apt-get update\n    apt-get upgrade -y\n    apt-get install ansible wget git -y\n",
            "name": "master-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.204.97.63",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/global/networks/kubernetes",
                "network_ip": "10.240.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/regions/europe-west4/subnetworks/ew4-kubernetes",
                "subnetwork_project": "infrastructure-384422"
              }
            ],
            "project": "infrastructure-384422",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/zones/europe-west4-a/instances/master-0",
            "service_account": [
              {
                "email": "109408775822-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kubernetes",
              "master"
            ],
            "tags_fingerprint": "UXl0DrYZ-m0=",
            "zone": "europe-west4-a"
          },
          "dependencies": [
            "google_compute_address.address-master-0",
            "google_compute_disk.master-0-boot-disk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": false,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/zones/europe-west4-b/disks/boot-disk-master-1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infrastructure-384422/zones/europe-west4-b/instances/master-1",
            "instance_id": "4827453006577335586",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "custom-2-2048",
            "metadata_fingerprint": "A4JQA1U-Z10=",
            "metadata_startup_script": "    apt-get update\n    apt-get upgrade -y\n    apt-get install ansible wget git -y\n",
            "name": "master-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.204.244.106",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/global/networks/kubernetes",
                "network_ip": "10.240.0.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/regions/europe-west4/subnetworks/ew4-kubernetes",
                "subnetwork_project": "infrastructure-384422"
              }
            ],
            "project": "infrastructure-384422",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/zones/europe-west4-b/instances/master-1",
            "service_account": [
              {
                "email": "109408775822-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kubernetes",
              "master"
            ],
            "tags_fingerprint": "UXl0DrYZ-m0=",
            "zone": "europe-west4-b"
          },
          "dependencies": [
            "google_compute_address.address-master-1",
            "google_compute_disk.master-1-boot-disk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": false,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/zones/europe-west4-a/disks/boot-disk-worker-0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infrastructure-384422/zones/europe-west4-a/instances/worker-0",
            "instance_id": "4724727847102381347",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "custom-2-2048",
            "metadata_fingerprint": "A4JQA1U-Z10=",
            "metadata_startup_script": "    apt-get update\n    apt-get upgrade -y\n    apt-get install ansible wget git -y\n",
            "name": "worker-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.90.130.215",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/global/networks/kubernetes",
                "network_ip": "10.240.0.20",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/regions/europe-west4/subnetworks/ew4-kubernetes",
                "subnetwork_project": "infrastructure-384422"
              }
            ],
            "project": "infrastructure-384422",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/zones/europe-west4-a/instances/worker-0",
            "service_account": [
              {
                "email": "109408775822-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kubernetes",
              "master"
            ],
            "tags_fingerprint": "UXl0DrYZ-m0=",
            "zone": "europe-west4-a"
          },
          "dependencies": [
            "google_compute_address.address-worker-0",
            "google_compute_disk.worker-0-boot-disk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": false,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/zones/europe-west4-b/disks/boot-disk-worker-1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infrastructure-384422/zones/europe-west4-b/instances/worker-1",
            "instance_id": "5873548366611152162",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "custom-2-2048",
            "metadata_fingerprint": "A4JQA1U-Z10=",
            "metadata_startup_script": "    apt-get update\n    apt-get upgrade -y\n    apt-get install ansible wget git -y\n",
            "name": "worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.91.59.13",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/global/networks/kubernetes",
                "network_ip": "10.240.0.21",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/regions/europe-west4/subnetworks/ew4-kubernetes",
                "subnetwork_project": "infrastructure-384422"
              }
            ],
            "project": "infrastructure-384422",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/zones/europe-west4-b/instances/worker-1",
            "service_account": [
              {
                "email": "109408775822-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kubernetes",
              "master"
            ],
            "tags_fingerprint": "UXl0DrYZ-m0=",
            "zone": "europe-west4-b"
          },
          "dependencies": [
            "google_compute_address.address-worker-1",
            "google_compute_disk.worker-1-boot-disk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/infrastructure-384422/global/networks/kubernetes",
            "mtu": 1460,
            "name": "kubernetes",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "infrastructure-384422",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/global/networks/kubernetes"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ew4-kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-21T15:19:46.572-07:00",
            "gateway_address": "10.240.0.1",
            "id": "projects/infrastructure-384422/regions/europe-west4/subnetworks/ew4-kubernetes",
            "ip_cidr_range": "10.240.0.0/24",
            "name": "ew4-kubernetes",
            "network": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/global/networks/kubernetes",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "infrastructure-384422",
            "purpose": "PRIVATE",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infrastructure-384422/regions/europe-west4/subnetworks/ew4-kubernetes",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.kubernetes"
          ]
        }
      ]
    }
  ]
}